...
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="bI1-R4-NGS" secondAttribute="height" multiplier="1:1" id="YWg-Zy-if8"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Episode" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i7K-Ns-6jQ">
                                <rect key="frame" x="36" y="129" width="342" height="20.333333333333343"/>
                                <accessibility key="accessibilityConfiguration" identifier="episodeTitle"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Channel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dHs-2k-eGe">
                                <rect key="frame" x="36" y="80" width="86" height="29"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZjA-QW-xcZ">
                                <rect key="frame" x="157" y="742" width="100" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="100" id="NR8-YW-Y8c"/>
                                    <constraint firstAttribute="height" constant="100" id="r3T-dL-3oz"/>
                                </constraints>
                                <state key="normal" image="play"/>
                                <connections>
                                    <action selector="playButtonClick:" destination="cSz-aN-TV4" eventType="touchUpInside" id="5Hs-hw-jMr"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="EuW-x5-7tw"/>
...
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="54g-jc-G5Q" secondAttribute="height" multiplier="1:1" id="227-A6-bZe"/>
                                </constraints>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MF0-9S-dSZ">
                                <rect key="frame" x="16" y="462" width="382" height="20.333333333333314"/>
                                <accessibility key="accessibilityConfiguration" identifier="title"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Lb-pz-RNm">
                                <rect key="frame" x="282" y="754.66666666666663" width="75" height="75"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="75" id="82h-FZ-GhZ"/>
                                    <constraint firstAttribute="height" constant="75" id="AA6-4X-JRX"/>
                                </constraints>
                                <state key="normal" image="next"/>
                                <connections>
                                    <action selector="nextButtonClick:" destination="gyS-cG-jVG" eventType="touchUpInside" id="AqZ-wW-hTm"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iFn-zZ-CmP">
                                <rect key="frame" x="57" y="754.66666666666663" width="75" height="75"/>
...
                                    <action selector="previousButtonClick:" destination="gyS-cG-jVG" eventType="touchUpInside" id="OMg-O3-Ah0"/>
                                </connections>
                            </button>
                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="BPA-ZZ-Kke">
                                <rect key="frame" x="28" y="632" width="358" height="31"/>
                                <color key="tintColor" systemColor="systemTealColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="timeSlider"/>
                                <connections>
                                    <action selector="timeSlderChange:" destination="gyS-cG-jVG" eventType="valueChanged" id="7lN-x8-4xP"/>
                                </connections>
                            </slider>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fhe-zv-3Ai">
                                <rect key="frame" x="157" y="742" width="100" height="100"/>
...
