...
                            <constraint firstAttribute="width" constant="96" id="BHI-LU-AsG"/>
                            <constraint firstAttribute="width" secondItem="bm0-mN-GBU" secondAttribute="height" multiplier="1:1" id="pDn-XP-B2S"/>
                        </constraints>
                    </imageView>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VKY-OX-Ka5">
                        <rect key="frame" x="120" y="12" width="308" height="20.5"/>
                        <accessibility key="accessibilityConfiguration" identifier="cellTitle"/>
                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                        <nil key="textColor"/>
                        <nil key="highlightedColor"/>
                    </label>
                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="azw-Pu-b3A">
                        <rect key="frame" x="120" y="87" width="36" height="21"/>
...
